--- a/styles/index.css
+++ b/styles/index.css
@@ -1,71 +1,192 @@
-* {
+*,
+*::before,
+*::after {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
 }
 
 body {
+  font-family: "Poppins", sans-serif;
   font-size: 16px;
-  line-height: 1.5;
   color: #333;
-  background-color: #a1c3ff;
-
-}
-
-h1, h2 {
-  margin-bottom: 15px;
   
 }
-
-img {
-  max-width: 100%;
-}
-
-ul {
-  list-style-type: none;
-}
-
-.container {
-  max-width: 1100px;
+ 
+.navigation {
+  font-weight: 700;
+  max-width: 1400px;
+  width: 100%;
   margin: 0 auto;
-  padding: 0 30px;
-}
-
-.navbar {
-  background-color: #3474e6;
-  color: white;
-  height: 60px;
-}
-
-.navbar.logo {
-  font-size: x-large;
-  font-weight: bold;
-}
-
-.navbar a {
-  color: white;
-  text-decoration: none;
-  font-size: 18px;
-  font-weight: bold;
-}
-
-.navbar a:hover {
-  color: lightblue;
-}
-
-.navbar .container {
+  padding-right: 15px;
+  padding-top: 30px;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  height: 100%;
+  box-sizing: border-box;
+  position: relative;
+  top: 30px;
 }
 
+.nav {
+  display: inline-flex;
+  list-style-type:none;
+  justify-content: flex-start;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  text-align: center;
+  margin-top: 48px;
+  margin-left: 98px;
+  line-height: 28px;
+  letter-spacing: 0.32px;
+  color: #2F281F;
+  cursor: pointer;
+  
+}
 
-.navbar ul {
+a {
+  text-decoration: none;
+}
+
+a:hover {
+  color: #ff9900;
+  font-weight: 600;
+}
+
+.nav li {
+  margin-left: 38px; 
+  
+}
+
+.sign-in {
+  margin-left: 200px;
+  background-color: #BCD0E5;
+  color: #173A56;
+  
+}
+
+.sign-up {
+  background-color:#ff9900 ;
+  color: #ffffff;
+}
+ 
+.nav h1 {
+  font-size: 44px;
+  font-weight: 700;
+
+}
+.nav-btn {
+  font-size: 16px;
+  font-weight: 600;
+  border-radius: 4px;
+  border: none;
+  padding-top: 22px;
+  padding-bottom: 22px;
+  padding-left: 47px;
+  padding-right: 47px;
   display: flex;
-
+  line-height: auto;
+  cursor: pointer;
+  
 }
 
-.navbar ul li {
-  margin-left: 20px;
+.nav-btn:hover {
+  background-color: #1B0A42;
+  color: #ffffff;
 }
+
+.logo {
+  display: inline-flex;
+  margin-top: 37px;
+  margin-left: 80px;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 30px;
+  line-height: 48px;
+  letter-spacing: -0.02em;
+  color: #0A1B32;
+}
+
+/* HEADER SECTION */
+.header {
+  display: flex;
+  margin: 0 auto;
+  justify-content: flex-start;
+  align-items: center
+} 
+
+.header-title {
+  max-width: 518px;
+  width: 100%;
+  margin-top: 211px;
+  margin-left: 145px;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 44px;
+  line-height: 54px;
+  letter-spacing: 0.002em;
+  color: #2F281E;
+}
+
+.header-info {
+  max-width: 458px;
+  width: 100%;
+  margin-top: 30px;
+  margin-left: 145px;
+  margin-right: 57px;
+  font-style: normal;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 28px;
+  letter-spacing: 0.04em;
+  color: #544837; 
+}
+
+.btn {
+  width: 152px;
+  height: 64px;
+  margin-top: 50px;
+  margin-left: 100px;
+  background-color: #ff9900;
+  color: #ffffff;
+  border-radius: 4px;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 32px;
+  text-align: center;
+  letter-spacing: 0.02em;
+  color: #ffffff;
+  border: none;
+  cursor: pointer;
+  align-items: center;
+}
+
+.btn:hover {
+  background-color: #1B0A42;;
+  color: #ffffff;
+}
+
+.get-started-btn{
+  background-color: orange;
+}
+
+.watch-video-btn {
+  background-color: pink;
+}
+
+
+.header-img {
+  display: inline-flex;
+  width: 605px;
+  height: 496px;
+  margin-top: 211px;
+  margin-right: 60px;
+  margin-left: 19px; 
+  align-items: flex-start;
+  
+}
+ /* END OF HEADER SECTION */
+
+
