--- a/styles/index.css
+++ b/styles/index.css
@@ -10,7 +10,7 @@ body {
   font-family: "Poppins", sans-serif;
   font-size: 16px;
   color: #333;
-  
+  position: relative;
 }
  
 .navigation {
@@ -144,10 +144,11 @@ a:hover {
 }
 
 .btn {
-  width: 152px;
-  height: 64px;
+  width: 175px;
+  height: 53px;
   margin-top: 50px;
-  margin-left: 100px;
+  margin-left: 147px;
+  margin-right: 30px;
   background-color: #ff9900;
   color: #ffffff;
   border-radius: 4px;
@@ -169,13 +170,19 @@ a:hover {
 }
 
 .get-started-btn{
-  background-color: orange;
+  background-color: #ff9900;
 }
 
-.watch-video-btn {
-  background-color: pink;
+.video-icon {
+  width: 20px;
+  height: 17px;
 }
 
+.video {
+  margin-left: 20px;
+  color: #ff9900;
+  text-decoration: underline;
+}
 
 .header-img {
   display: inline-flex;
@@ -189,4 +196,220 @@ a:hover {
 }
  /* END OF HEADER SECTION */
 
+ /* FEATURE SECTION */
+ .feature {
+  margin-top: 99px;
+  margin-left: 147px;
+  display: inline;
+ }
 
+ .feature-title {
+  margin-top: 108px;
+  margin-left: 500px;
+  margin-right: 500px;
+  margin-bottom: 50px;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: auto;
+  letter-spacing: 0px;
+  color: #2F281E;
+  
+ }
+
+ .feature-card {
+  max-width: 1095px;
+  margin: 0 auto;
+  margin-left: 147px;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  
+  
+ }
+ .card {
+  flex: 1;
+  min-width: 240px;
+  width: 100%;
+  margin-top: 30px;
+  align-items: flex-start;
+  
+ }
+
+ .card-icon {
+  width: 51px;
+  height: 55px;
+  justify-content: flex-start;
+ }
+
+ .card-title {
+  font-size: 22px ;
+  font-weight: 600;
+  line-height: auto;
+  color: #2F281E;
+  justify-content: flex-start;
+ }
+
+ .card-info {
+  font-size:16px ;
+  line-height: 26px;
+  font-weight: 500;
+  color: #544837;
+  justify-content: flex-start;
+  
+ }
+
+ .center {
+  margin-top: 50px;
+  margin-left: 600px;
+  justify-content: center;
+  align-content: center;
+  
+ }
+
+ .reverse {
+  flex-direction: row-reverse;
+ }
+ /* END OF FEATURE SECTION */
+
+ /* EFFORTLESS SECTION */
+ .effortless {
+  margin-top: 99px;
+  display: flex;
+  margin: 0 auto;
+  justify-content: flex-start;
+  align-items: center
+
+} 
+
+.effortless-title {
+  max-width: 518px;
+  width: 100%;
+  margin-left: 145px;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: auto;
+  letter-spacing: 0.002em;
+  color: #2F281E;
+}
+
+.effortless-info {
+  justify-content: flex-start;
+  max-width: 486px;
+  margin-top: 20px;
+  margin-left: 145px;
+  margin-right: 113px;
+  font-style: normal;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 26px;
+  letter-spacing: 0px;
+  color: #544837; 
+}
+
+.effortless-img {
+  display: inline-flex;
+  width: 520px;
+  height: 574px;
+  margin-top: 99px;
+  justify-content: flex-end;
+  align-items: flex-start; 
+}
+
+.col {
+  display: flex;
+  flex-direction: column;
+}
+
+.element-1 {
+  order:3;
+
+}
+
+.element-3 {
+  order: 1;
+}
+/* END EFFORTLESS SECTION */
+
+/* PRODUCT MANAGER SECTION */
+
+
+.product-manager {
+  margin-top: 99px;
+  display: flex;
+  margin: 0 auto;
+  justify-content: flex-start;
+  align-items: center
+
+} 
+
+.product-manager-title {
+  max-width: 518px;
+  width: 100%;
+  margin-left: 145px;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: auto;
+  letter-spacing: 0.002em;
+  color: #2F281E;
+}
+
+.product-manager-info {
+  justify-content: flex-start;
+  max-width: 486px;
+  margin-top: 20px;
+  margin-left: 145px;
+  margin-right: 113px;
+  font-style: normal;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 26px;
+  letter-spacing: 0px;
+  color: #544837; 
+}
+
+.product-manager-img {
+  display: inline-flex;
+  width: 520px;
+  height: 574px;
+  margin-top: 99px;
+  justify-content: flex-end;
+  align-items: flex-start; 
+}
+
+.margin {
+  margin-left: 30px;
+}
+ 
+.baseline {
+  align-items: baseline;
+}
+
+  .right {
+  flex-direction: column;
+  right: 0%
+  
+}
+
+::placeholder {
+  font-size: 16px;
+  line-height: 28px;
+}
+
+.jusifile {
+  justify-content: space-between;
+  flex-direction: column;
+  
+}
+
+.footer {
+display: flex;
+flex-direction: row;
+bottom: 0;
+margin-top: 10%;
+}
+
+
+/* END OF PRODUCT MANAGER SECTION */
